Correction erreurs + commentaires

--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-GYZLkPuBGxw"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -157,7 +157,10 @@
         }
       ],
       "source": [
-        "def clean_cols(df):\n",
+        "# Donnée Daily sur un actif\n",
+        "\n",
+        "# clean_cols :Enleve la ligne Ticker (avant : structure dataframe dans un dataframe)\n",
+        "def clean_cols(df): # Nettoie les colonnes multi-index de yfinance\n",
         "\n",
         "    df.columns = [c[0] for c in df.columns]\n",
         "    return df\n",
@@ -179,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -241,6 +244,7 @@
         }
       ],
       "source": [
+        "# Visualisation du cours de clôture SP500\n",
         "plt.figure(figsize=(12,5))\n",
         "plt.plot(sp500_v[\"Close\"], color=\"steelblue\")\n",
         "plt.title(\"Évolution du SP500 (cours de clôture)\")\n",
@@ -251,22 +255,20 @@
         "\n",
         "\n",
         "#Visualisations Rendements\n",
-        "\n",
-        "\n",
         "plt.figure(figsize=(12,5))\n",
-        "sp500_v[\"rendements\"]= (sp500_v[\"Close\"]-sp500_v[\"Close\"].shift(1))/sp500_v[\"Close\"].shift(1)*100\n",
-        "sp500_v=sp500_v.dropna()\n",
+        "sp500_v[\"rendements\"]= (sp500_v[\"Close\"]-sp500_v[\"Close\"].shift(1))/sp500_v[\"Close\"].shift(1)*100 #Rendements journaliers en % et Shift(1) pour décaler d'un jour\n",
+        "sp500_v=sp500_v.dropna() # On enlève les NaN générés par le shift (on eleve la premiere donnée)\n",
         "plt.plot(sp500_v[\"rendements\"],color=\"red\")\n",
-        "plt.title(\"Rendements Journaliers du CAC40 en %\")\n",
+        "plt.title(\"Rendements Journaliers du SP500 en %\")\n",
         "plt.xlabel(\"Date\")\n",
         "plt.ylabel(\"Rendement (%)\")\n",
-        "plt.grid(True, alpha=0.3)\n",
+        "plt.grid(True, alpha=0.3) # alpha pour la transparence\n",
         "plt.show()\n",
         "\n",
-        "#Histogramme avec KDE\n",
+        "#Histogramme avec KDE (Kernel Density Estimate)\n",
         "plt.figure(figsize=(10,5))\n",
-        "sns.histplot(sp500_v[\"rendements\"], bins=80, color=\"orange\", edgecolor=\"black\", alpha=0.7,stat=\"density\")\n",
-        "sns.kdeplot(sp500_v[\"rendements\"],color=\"blue\",label=\"Densité KDE\")\n",
+        "sns.histplot(sp500_v[\"rendements\"], bins=80, color=\"orange\", edgecolor=\"black\", alpha=0.7,stat=\"density\") # Histogramme des rendements journaliers\n",
+        "sns.kdeplot(sp500_v[\"rendements\"],color=\"blue\",label=\"Densité KDE\") # KDE approxime la densité de probabilité courbe bleu\n",
         "plt.title(\"Distribution des rendements journaliers du SP500\")\n",
         "plt.xlabel(\"Rendement journalier (%)\")\n",
         "plt.ylabel(\"Fréquence\")\n",
@@ -276,6 +278,8 @@
         "\n",
         "#Volatilité\n",
         "\n",
+        "# rolling(window=30).std()* np.sqrt(252)  : Applique une fonction sur une fenêtre glissante de 30 jours (vol : somme de  des rendements sur 30 jours)\n",
+        "# sp500_v[\"rendements\"].rolling(window=30).std()* np.sqrt(252) : Calcule l'écart-type des rendements sur une fenêtre de 30 jours et le met à l'échelle pour annualiser la volatilité\n",
         "sp500_v[\"vol_30j\"]=sp500_v[\"rendements\"].rolling(window=30).std()* np.sqrt(252)   #On a 252 jours de bourse par an et le VIX est annualisé: On met à l'échelle\n",
         "sp500_v=sp500_v.dropna()\n",
         "plt.figure(figsize=(12,5))\n",
@@ -286,7 +290,7 @@
         "plt.grid(True, alpha=0.3)\n",
         "\n",
         "#VIX\n",
-        "plt.plot(VIX[\"Close\"], color=\"blue\", label=\"VIX (Volatilité Implicite)\")\n",
+        "plt.plot(VIX[\"Close\"], color=\"blue\", label=\"VIX (Volatilité Implicite)\") # VIX (sur SP500): mesure la volatilité anticipée par le marché\n",
         "\n",
         "plt.legend()\n"
       ]
