--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -409,12 +409,13 @@
         "url = \"https://datahub.io/core/s-and-p-500-companies/r/constituents.csv\"\n",
         "sp500 = pd.read_csv(url)\n",
         "sp500 = sp500.drop(columns=[\"CIK\", \"Founded\", \"Date added\", \"Headquarters Location\"])  #On supprime les colonnes inutiles\n",
+        "# CIK : Central Index Key (identifiant unique pour les entreprises auprès de la SEC)\n",
         "sp500.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "GbBflbTEymwk"
       },
@@ -534,33 +535,33 @@
         }
       ],
       "source": [
-        "#On calcule le poids des entreprises manuellement\n",
+        "#On calcule le poids des entreprises manuellement (tres long : on doit recuperer la marketcap de chaque entreprise puis le mettre dans le dataframe)\n",
         "\n",
-        "def get_marketcap(ticker):\n",
+        "def get_marketcap(ticker): # Récupère la capitalisation boursière d'une entreprise (nb action x prix action)\n",
         "  try:\n",
         "\n",
-        "      #On a 2/3 tickers qui sont différents entre le deux données, on corrige ça:\n",
+        "      #On a 2/3 tickers qui sont différents entre le deux données, on corrige ça: # on remplace BRK.B par BRK-B et BF.B par BF-B (suite à pas de data qd on executait info)\n",
         "      if(ticker==\"BRK.B\"):\n",
         "        ticker=\"BRK-B\"\n",
         "      if(ticker==\"BF.B\"):\n",
         "        ticker=\"BF-B\"\n",
         "\n",
-        "      info = yf.Ticker(ticker).info\n",
-        "      mc = info.get(\"marketCap\", None)\n",
+        "      info = yf.Ticker(ticker).info # Récupère les informations de l'entreprise via yfinance\n",
+        "      mc = info.get(\"marketCap\", None) # Récupère spécifiquement la capitalisation boursière\n",
         "\n",
         "\n",
         "\n",
-        "      if mc is None:\n",
+        "      if mc is None: # Si pas de data sur la capitalisation boursière comme pour WBA\n",
         "          print(f\"Pas de data pour {ticker}\")\n",
         "      return mc\n",
         "\n",
         "  except Exception as e:\n",
-        "      print(f\"Erreur sur {ticker}: {e}\")\n",
+        "      print(f\"Erreur sur {ticker}: {e}\") # print WBA car pas de marketcap\n",
         "      return None\n",
         "\n",
-        "sp500[\"MarketCap\"] = sp500[\"Symbol\"].apply(get_marketcap)\n",
-        "total_marketcap = sp500[\"MarketCap\"].sum()\n",
-        "sp500[\"Poids (%)\"] = (sp500[\"MarketCap\"] / total_marketcap) * 100\n",
+        "sp500[\"MarketCap\"] = sp500[\"Symbol\"].apply(get_marketcap) # Applique la fonction get_marketcap à chaque ticker du SP 500\n",
+        "total_marketcap = sp500[\"MarketCap\"].sum() # Calcule la capitalisation boursière totale du SP 500\n",
+        "sp500[\"Poids (%)\"] = (sp500[\"MarketCap\"] / total_marketcap) * 100 # pourcentage du poids de chaque entreprise dans le SP 500\n",
         "sp500 = sp500.sort_values(\"Poids (%)\", ascending=False) #On trie pour faire joli\n",
         "\n",
         "sp500.head()"
@@ -577,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "cyrYSNND3FMn"
       },
@@ -595,9 +596,9 @@
       ],
       "source": [
         "#Camembert Poids/Secteur\n",
-        "poids_secteurs=sp500.groupby(\"GICS Sector\")[\"Poids (%)\"].sum()\n",
+        "poids_secteurs=sp500.groupby(\"GICS Sector\")[\"Poids (%)\"].sum() # grouby pour avoir le poids total par secteur\n",
         "plt.figure(figsize=(8,8))\n",
-        "plt.pie(poids_secteurs, labels=poids_secteurs.index,autopct=\"%1.1f%%\")\n",
+        "plt.pie(poids_secteurs, labels=poids_secteurs.index,autopct=\"%1.1f%%\") # autopct pour afficher les pourcentages et %1.1f%% pour 1 chiffre avant la virgule et 1 après\n",
         "plt.title(\"Poids des secteurs du SP500\")\n",
         "plt.show()"
       ]
@@ -622,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "0UqDaia760uI"
       },
@@ -639,14 +640,16 @@
         }
       ],
       "source": [
-        "consumer_disc = sp500[sp500[\"GICS Sector\"] == \"Consumer Discretionary\"]\n",
+        "# on essaye de voir ce qu'il se passe dans le secteur Consumer Discretionary (car bcp de sous-industries : Automobiles, Hotels, broadling return Amazon)\n",
+        "\n",
+        "consumer_disc = sp500[sp500[\"GICS Sector\"] == \"Consumer Discretionary\"] # Filtrer les entreprises du secteur Consumer Discretionary\n",
         "poids_secteurs_consumer_disc = consumer_disc.groupby(\"GICS Sub-Industry\")[\"Poids (%)\"].sum()\n",
         "\n",
         "# Regrouper les sous-industries de moins de 0.5 % (par rapport au total) dans \"Autres\" pour avoir un camembert moins chargé\n",
-        "poids = poids_secteurs_consumer_disc.copy()\n",
+        "poids = poids_secteurs_consumer_disc.copy() \n",
         "autres = poids[poids < 0.5].sum()\n",
         "poids = poids[poids >= 0.5]\n",
-        "poids[\"Autres\"] = autres\n",
+        "poids[\"Autres\"] = autres # Ajouter la catégorie \"Autres\" pour les sous-industries moins représentées\n",
         "\n",
         "# Camembert plus lisible\n",
         "plt.figure(figsize=(7,7))\n",
@@ -672,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "VsDeZ3D090i_"
       },
@@ -834,7 +837,7 @@
       ],
       "source": [
         "#On prend aussi le top 10 du SP500:\n",
-        "top10 = sp500.sort_values(\"Poids (%)\", ascending=False).head(10)\n",
+        "top10 = sp500.sort_values(\"Poids (%)\", ascending=False).head(10) # On récupère les 10 entreprises avec le plus de poids\n",
         "top10"
       ]
     },
