--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "ghwdBxeW-faI"
       },
@@ -893,7 +893,7 @@
       ],
       "source": [
         "# Métaux\n",
-        "cuivre = clean_cols(yf.download(\"HG=F\", start,end))\n",
+        "cuivre = clean_cols(yf.download(\"HG=F\", start,end)) # Copper Futures\n",
         "aluminium = clean_cols(yf.download(\"ALI=F\", start, end))\n",
         "nickel = clean_cols(yf.download(\"JJN\", start, end))       #ETF JNN (à défaut d'avoir la donnée brute)\n",
         "zinc = clean_cols(yf.download(\"ZINC.L\", start, end))    #ETF\n",
@@ -905,12 +905,12 @@
         "# Énergie\n",
         "petrole = clean_cols(yf.download(\"CL=F\", start, end))\n",
         "gaz = clean_cols(yf.download(\"NG=F\", start, end))\n",
-        "uranium = clean_cols(yf.download(\"URA\", start, end))       # ETF Global x Uranium (à défaut d'avoir la donnée brute)\n"
+        "uranium = clean_cols(yf.download(\"URA\", start, end))       # ETF Global x Uranium (à défaut d'avoir la donnée brute) (des centrales jusqu au minage) (etf sur energie nucléaire)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "OsoLeB7pASl-"
       },
@@ -937,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "5vz2Ic1y1luF"
       },
@@ -960,9 +960,10 @@
         }
       ],
       "source": [
-        "def rdm(df):\n",
+        "# Calcul des rendements pour chaque dataset\n",
+        "def rdm(df): \n",
         "    df[\"rendements\"] = (df[\"Close\"] - df[\"Close\"].shift(1)) / df[\"Close\"].shift(1) * 100\n",
-        "    return df.dropna(inplace=True)\n",
+        "    return df.dropna(inplace=True) # dropna pour enlever les NaN générés par le shift (dropna cree un nouveau dataframe, inplace=True modifie le dataframe directement)\n",
         "\n",
         "\n",
         "# Application de la fonction à tous les datasets\n",
@@ -974,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "Ih3SxBjgvhbr"
       },
@@ -992,7 +993,7 @@
       "source": [
         "#Pour ce qui est de la santé économique américaine, nous prendrons les obligations sur 10 ans.\n",
         "\n",
-        "oblig_10ans = clean_cols(yf.download(\"^TNX\", start, end))"
+        "oblig_10ans = clean_cols(yf.download(\"^TNX\", start, end)) # ^TNX : Cours des obligations américaines à 10 ans\n"
       ]
     },
     {
