--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "FD6bF0kvmU2a"
       },
@@ -1023,12 +1023,12 @@
         "\n",
         "\n",
         "def RSI(data, dt):\n",
-        "    delta = data.diff()\n",
-        "    gain = (delta.where(delta > 0, 0)).rolling(window=dt).mean()\n",
-        "    loss = (-delta.where(delta < 0, 0)).rolling(window=dt).mean()\n",
+        "    delta = data.diff() # Calcule la différence entre les prix consécutifs\n",
+        "    gain = (delta.where(delta > 0, 0)).rolling(window=dt).mean() # Moyenne des gains sur la fenêtre dt\n",
+        "    loss = (-delta.where(delta < 0, 0)).rolling(window=dt).mean() # Moyenne des pertes sur la fenêtre dt\n",
         "\n",
-        "    rs = gain / loss\n",
-        "    rsi = 100 - (100 / (1 + rs))\n",
+        "    rs = gain / loss # Relative Strength c'est le ratio des gains moyens sur les pertes moyennes\n",
+        "    rsi = 100 - (100 / (1 + rs)) # Formule du RSI\n",
         "    return rsi\n",
         "\n",
         "\n",
@@ -1038,7 +1038,8 @@
         "sma=SMA(sp500_v[\"Volume\"],14)   #Nous prendrons également une SMA à court terme (à la même fenêtre que la rsi pour une question de cohérence et également pour les raisons énoncées en haut)\n",
         "#sma : rolling moyenne somme prix / n\n",
         "#rsi : pression à la hausse ou à la baisse\n",
-        "\n"
+        "sma.head() # plein de na pas le dataframe principal df donc on s'en occupe lors du merge\n",
+        "sma.tail()\n"
       ]
     },
     {
