update des todo

--- a/rapport.tex
+++ b/rapport.tex
@@ -285,9 +285,9 @@ The table below shows the performance (values to be filled from our notebook):
         \toprule
         Model & MSE & RMSE & $R^2$ \\
         \midrule
-        Linear Regression       & TODO & TODO & TODO \\
-        Random Forest Regressor & TODO & TODO & TODO \\
-        Gradient Boosting       & TODO & TODO & TODO \\
+        Linear Regression       & afaire & a faire & a faire\\
+        Random Forest Regressor & a faire & a faire & a faire \\
+        Gradient Boosting       & a faire & a faire & a faire \\
         \bottomrule
     \end{tabular}
     \caption{Test performance of the different models.}
