Ajout explications coeff Lasso

--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -3386,6 +3386,13 @@
         "coef_lasso = pd.Series(model2_lasso.coef_, index=X_train_acp.columns)\n",
         "coef_lasso[coef_lasso != 0].sort_values(key=abs, ascending=False)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Le Lasso met en évidence que le VIX est principalement expliqué par le niveau du marché actions, la volatilité implicite (VVIX) et des facteurs macroéconomiques globaux, tandis que les variables dynamiques additionnelles apportent peu d’information marginale."
+      ]
     }
   ],
   "metadata": {
