--- a/ProjetML2.ipynb
+++ b/ProjetML2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "F5-mlNYXcV3r"
       },
@@ -20,6 +20,7 @@
         "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
         "from sklearn.metrics import mean_squared_error,r2_score\n",
         "import ipywidgets as widgets #Sert pour le slider\n",
+        "import scipy.stats as stats\n",
         "\n",
         "from ipywidgets import interact,IntSlider\n",
         "\n"
@@ -3609,10 +3610,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def plot_real_vs_pred(y_true, y_pred, title):\n",
+        "    plt.figure(figsize=(10, 4))\n",
+        "    plt.plot(y_true.index, y_true, label=\"VIX réel\", alpha=0.7)\n",
+        "    plt.plot(y_true.index, y_pred, label=\"VIX prédit\", alpha=0.7)\n",
+        "    plt.title(title)\n",
+        "    plt.xlabel(\"Date\")\n",
+        "    plt.ylabel(\"VIX\")\n",
+        "    plt.legend()\n",
+        "    plt.grid(alpha=0.3)\n",
+        "    plt.show()\n",
+        "\n",
+        "def plot_residuals_diagnostics(residuals, model_name):\n",
+        "    # Résidus dans le temps\n",
+        "    plt.figure(figsize=(10, 3))\n",
+        "    plt.plot(residuals)\n",
+        "    plt.axhline(0, color=\"black\", linewidth=1)\n",
+        "    plt.title(f\"Résidus dans le temps — {model_name}\")\n",
+        "    plt.xlabel(\"Date\")\n",
+        "    plt.ylabel(\"Erreur\")\n",
+        "    plt.grid(alpha=0.3)\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Histogramme + KDE des résidus\n",
+        "    plt.figure(figsize=(10, 5))\n",
+        "    sns.histplot(\n",
+        "        residuals,\n",
+        "        bins=80,\n",
+        "        color=\"orange\",\n",
+        "        edgecolor=\"black\",\n",
+        "        alpha=0.7,\n",
+        "        stat=\"density\"\n",
+        "    )\n",
+        "    sns.kdeplot(\n",
+        "        residuals,\n",
+        "        color=\"blue\",\n",
+        "        label=\"Densité KDE\"\n",
+        "    )\n",
+        "    plt.axvline(0, color=\"black\", linestyle=\"--\", linewidth=1)\n",
+        "    plt.title(f\"Distribution des résidus — {model_name}\")\n",
+        "    plt.xlabel(\"Résidu\")\n",
+        "    plt.ylabel(\"Densité\")\n",
+        "    plt.grid(axis=\"y\", alpha=0.3)\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Q-Q plot\n",
+        "    plt.figure(figsize=(5, 5))\n",
+        "    stats.probplot(residuals, dist=\"norm\", plot=plt)\n",
+        "    plt.title(f\"Q-Q plot des résidus — {model_name}\")\n",
+        "    plt.show()"
+      ]
     }
   ],
   "metadata": {
@@ -3620,7 +3672,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -3633,7 +3686,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.9"
+      "version": "3.10.15"
     }
   },
   "nbformat": 4,
